<resources>
    <string name="app_name">Smartery</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="home">Home</string>
    <string name="new_dictionary">New dictionary</string>
    <string name="menu_dictionaries">Dictionaries</string>
    <string name="dictionary">Dictionary</string>
    <string name="edit_title">Edit title</string>
    <string name="settings">Settings</string>
    <string name="smart_dictionary">Smart dictionary</string>
    <string name="gmail_of_creator">malenkyyzhenia11@gmail.com</string>
    <string name="social">Social</string>
    <string name="created">Created</string>
    <string name="edit_title_of_dictionary">Edit title of dictionary</string>
    <string name="profile">Profile</string>
    <string name="translation">Translation</string>
    <string name="word">Word</string>
    <string name="nothing" />
    <string name="label">Smartery</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="new_">New</string>
    <string name="delete">Delete</string>
    <string name="ha_lo">ha-lo</string>
    <string name="definition">Definition</string>
    <string name="example">Example</string>
    <string name="synonyms">Synonyms</string>
    <string name="antonyms">Antonyms</string>
    <string name="search">Search</string>
    <string name="user_name">User name</string>
    <string name="number_of_creator">+380 67 103 74 76</string>
    <string name="user">User</string>
    <string name="username">jackichh</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_new_account">Create New Account</string>
    <string name="new_account_desc">Please fill details below to create an account</string>
    <string name="log_in_account">Log in account</string>
    <string name="log_in_account_desc">Please log in to continue</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="theme_title">Dark Theme</string>
    <string name="brightness_level">Brightness Level</string>
    <string name="recover_password">Recover Password</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="full_name">Full name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>