<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp"
    app:cardBackgroundColor="@color/colorBackground"
    android:layout_margin="8dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/definition"
            android:id="@+id/text_definition"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/colorWhite"
            android:padding="8dp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/example"
            android:id="@+id/text_example"
            android:textStyle="normal"
            android:textSize="18sp"
            android:textColor="@color/colorWhite"
            android:padding="8dp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/synonyms"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/colorWhite"
            android:padding="8dp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/text_synonyms"
            android:textStyle="italic"
            android:textSize="16sp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:textColor="@color/colorWhite"
            android:padding="8dp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/antonyms"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/colorWhite"
            android:padding="8dp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:id="@+id/text_antonyms"
            android:textStyle="italic"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:padding="8dp"
            android:textAlignment="center"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>