<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/home_item"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginBottom="24dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/logo_home"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="24dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_home"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/home_title"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="24dp"
                android:gravity="center_vertical"
                android:text="@string/home"
                android:fontFamily="@font/ubuntu_bold"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/logo_home"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dictionaries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            app:layout_constraintTop_toBottomOf="@id/home_item">

            <ImageView
                android:id="@+id/logo_dictionary"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="24dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_menu_book"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dictionary_title"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="24dp"
                android:gravity="center_vertical"
                android:text="@string/menu_dictionaries"
                android:fontFamily="@font/ubuntu_bold"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/logo_dictionary"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dictionariesList"
            android:background="@color/colorBackground"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="20dp"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="20dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/dictionaries"
            app:layout_constraintBottom_toTopOf="@id/add_item2"
            tools:listitem="@layout/item_dictionary"
            android:isScrollContainer="true"
            app:fastScrollEnabled="false"/>



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/add_item"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginVertical="24dp"
            app:layout_constraintBottom_toBottomOf="parent">
<!--            app:layout_constraintTop_toBottomOf="@id/dictionary_list">-->

            <ImageView
                android:id="@+id/plus"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="24dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/add_title"
                android:fontFamily="@font/ubuntu_bold"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="24dp"
                android:gravity="center_vertical"
                android:text="@string/new_dictionary"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/plus"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/add_item2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@id/add_item">
        <!--            app:layout_constraintTop_toBottomOf="@id/dictionary_list">-->

        <ImageView
            android:id="@+id/gear"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="24dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/settings"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:gravity="center_vertical"
            android:text="@string/settings"
            android:fontFamily="@font/ubuntu_bold"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/gear"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>