<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:paddingTop="10dp"
                android:id="@+id/profileIcon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/profile_icon_blue"/>

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:textStyle="bold"
                android:text="@string/username"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_creator"
                android:textSize="12sp"
                android:layout_gravity="center"
                android:textColor="#CCFFFFFF"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="30dp"
                android:layout_gravity="center"
                android:background="@drawable/round_back_secondary_100"
                android:text="Edit Profile"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"/>

            <LinearLayout
                android:background="@drawable/round_back_white10_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="40dp"
                android:orientation="vertical"
                android:padding="12dp">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/userIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="8dp"
                        android:src="@drawable/ic_person_white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="4dp"
                        android:layout_toEndOf="@id/userIcon"
                        android:text="@string/username"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/emailIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="8dp"
                        android:src="@drawable/ic_email_white" />

                    <TextView
                        android:layout_marginStart="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/emailIcon"
                        android:text="@string/gmail_of_creator"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/nameIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="8dp"
                        android:src="@drawable/ic_badge" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="4dp"
                        android:layout_toEndOf="@id/nameIcon"
                        android:text="@string/user"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/phoneIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="8dp"
                        android:src="@drawable/ic_phone_white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="4dp"
                        android:layout_toEndOf="@id/phoneIcon"
                        android:text="@string/number_of_creator"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                </RelativeLayout>

            </LinearLayout>



        </LinearLayout>
    </ScrollView>
</LinearLayout>